src/css/style.css
/* ... */
.toggle-chat:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

.tooltip.visible {
    visibility: visible;
    opacity: 1;
}

.sticky-button {
    background-color: #534caf;
    color: white;
    padding: 10px 15px;
    margin: 10px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.sticky-button:hover {
    background-color: #403890;
}

#import-input {
    display: none;
}

#import-label {
    background-color: #534caf;
    color: white;
    padding: 10px 15px;
    margin: 10px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

#import-label:hover {
    background-color: #403890;
}

.mic {
    background-color: transparent;
    border: none;
    font-size: 24px;
    cursor: pointer;
    color: #555;
    z-index: 0;
}

.mic:focus {
    outline: none;
}

.recording-status {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: red;
    color: white;
    padding: 10px 20px;
    border-radius: 8px;
    font-weight: bold;
}

@keyframes shake {
    0% { transform: translateX(0px); }
    25% { transform: translateX(-5px); }
    50% { transform: translateX(5px); }
    75% { transform: translateX(-5px); }
    100% { transform: translateX(0px); }
}

.shake-it {
    animation: shake 0.5s;
}

@keyframes pulse {
    0% {
        transform: scale(1);
        opacity: 0.7;
    }
    50% {
        transform: scale(1.05);
        opacity: 1;
    }
    100% {
        transform: scale(1);
        opacity: 0.7;
    }
}

.pulse-effect {
    animation: pulse 1s infinite;
}

.note.highlighted {
    border: 3px solid gold;
    box-shadow: 0 0 10px rgba(255, 215, 0, 0.7);
}

.highlight-toggle {
    background-color: transparent;
    border: none;
    cursor: pointer;
    font-size: 18px;
    margin-right: 5px;
}

.calculator {
    position: fixed;
    bottom: 10px;
    left: 10px;
    width: 15vw;
    background-color: #fff;
    border: 1px solid #ccc;
    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
    overflow: hidden;
    transition: transform 0.2s;
}

.calculator:hover {
    transform: scale(1.03);
}

.calc-header {
    background-color: #534caf;
    color: white;
    padding: 10px;
    border-bottom: 1px solid #403890;
    font-size: 1.5rem;
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.calc-title {
    font-weight: 400;
    font-size: 1rem;
}

.toggle-calc {
    background-color: #534caf;
    color: white;
    border: none;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    font-size: 1rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 0.3s;
}

.toggle-calc:hover {
    background-color: #403890;
}

.calc-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.calc-screen {
    width: calc(100% - 20px);
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    text-align: right;
    font-size: 1.5rem;
    cursor: text;
    transform: translateX(5%);
}

.calc-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.calc-buttons button {
    width: 20%;
    padding: 10px 0;
    margin: 5px 5px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f7f7f7;
    font-size: 1rem;
    cursor: pointer;
    transition: background-color 0.2s;
    color: black;
}

.calc-buttons button:hover {
    background-color: #eaeaea;
}

.tooltip {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: white;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 0.3s;
}

button:hover .tooltip {
    visibility: visible;
    opacity: 1;
}

#calculator,
.chatbot,
.weather-container,
#mini-task-list {
    display: none;
}

@media (min-width: 904.5px) {
    #calculator,
    .chatbot,
    .weather-container,
    #mini-task-list {
        display: block;
    }
}

@media (min-width: 904.5px) {
    #toggleReminderBtn,
    #toggleGoalsTrackerBtn {
        display: inherit;
    }
}

@media (max-width: 768px) {
    #toggleCalcBtn {
        display: none;
    }
}

.quick-access-toolbar {
    position: fixed;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    background: #534caf;
    border-radius: 0 5px 5px 0;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    padding: 10px 5px;
    padding-right: 6px;
}

.quick-access-toolbar button {
    background: #fff;
    border: none;
    cursor: pointer;
    padding: 10px;
    margin: 5px 0;
    font-size: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    transition: background-color 0.3s;
}

.quick-access-toolbar button:hover {
    background-color: #e0e0e0;
}

.note.pinned {
    border: 2px solid gold;
}

.quick-access-toolbar i {
    color: #333;
}

.feedback-container {
    position: fixed;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    width: 200px;
    z-index: 10000;
}

.reminder-container {
    position: fixed;
    right: 0;
    top: 54%;
    transform: translateY(-50%);
    width: 200px;
    z-index: 1000;
}

.feedback-btn {
    position: absolute;
    right: 0;
    top: -40px;
    background: #534caf;
    border: none;
    border-radius: 50%;
    color: white;
    cursor: pointer;
    padding: 10px;
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.feedback-title {
    color: #534caf;
}

#feedbackText {
    border-radius: 8px;
}
/* ... */

